native/crates/specular-scene/tests/snapshots/edges__a_selected_entity_shows_a_dot_once_the_pointer_is_over_an_anchor.snap
---
source: crates/specular-scene/tests/edges.rs
expression: app.scene_snapshot()
---
canvas rect 100,100 200x100 fill=#b5b9c0 stroke=#464a53/2/centre
canvas rect 500,100 200x100 fill=#b5b9c0 stroke=#464a53/2/centre
screen rect 99,99 202x102 stroke=#3b82f6/1/inside
screen rect 95,95 8x8 fill=#ffffff stroke=#3b82f6/1/inside
screen rect 297,95 8x8 fill=#ffffff stroke=#3b82f6/1/inside
screen rect 297,197 8x8 fill=#ffffff stroke=#3b82f6/1/inside
screen rect 95,197 8x8 fill=#ffffff stroke=#3b82f6/1/inside
screen ellipse 196,88 8x8 fill=#ffffff stroke=#3b82f6/1/centre
