native/crates/specular-scene/tests/snapshots/edges__the_rubber_band_snaps_to_an_anchor_with_a_ringed_dot.snap
---
source: crates/specular-scene/tests/edges.rs
expression: app.scene_snapshot()
---
canvas rect 100,100 200x100 fill=#b5b9c0 stroke=#464a53/2/centre
canvas rect 500,100 200x100 fill=#b5b9c0 stroke=#464a53/2/centre
screen ellipse 196,88 8x8 fill=#ffffff stroke=#3b82f6/1/centre
screen ellipse 304,146 8x8 fill=#ffffff stroke=#3b82f6/1/centre
screen ellipse 196,204 8x8 fill=#ffffff stroke=#3b82f6/1/centre
screen ellipse 88,146 8x8 fill=#ffffff stroke=#3b82f6/1/centre
screen ellipse 596,88 8x8 fill=#ffffff stroke=#3b82f6/1/centre
screen ellipse 704,146 8x8 fill=#ffffff stroke=#3b82f6/1/centre
screen ellipse 596,204 8x8 fill=#ffffff stroke=#3b82f6/1/centre
screen ellipse 488,146 8x8 fill=#ffffff stroke=#3b82f6/1/centre
screen path M308,150 C381.6,150 418.4,150 492,150 stroke=#3b82f6/2 cap=Butt join=Miter dash=6/4
screen ellipse 305,147 6x6 fill=#3b82f6
screen ellipse 487,145 10x10 fill=#ffffff stroke=#3b82f6/2/centre
